--- a/home.html
+++ b/home.html
@@ -74,7 +74,10 @@
           <img src="./assets/send1.png" alt="" class="mx-auto" />
           <h2>Cashout</h2>
         </div>
-        <div class="border-2 border-gray-300 text-center p-3 rounded-lg">
+        <div
+          id="transfer-money"
+          class="border-2 border-gray-300 text-center p-3 rounded-lg"
+        >
           <img src="./assets/money1.png" alt="" class="mx-auto" />
           <h2>Transfer Money</h2>
         </div>
@@ -95,7 +98,7 @@
 
     <div class="all-form-sections max-w-lg mx-auto mb-[50px]">
       <!-- add money -->
-      <div id="add-money-parent">
+      <div id="add-money-parent" class="form">
         <h1 class="font-bold my-5">Add Money</h1>
         <form class="bg-white rounded-2xl p-8">
           <div>
@@ -155,7 +158,7 @@
 
       <!-- cash out -->
 
-      <div id="cash-out-parent" style="display: none">
+      <div id="cash-out-parent" class="form" style="display: none">
         <h1 class="font-bold my-5">Cash Out</h1>
         <form class="bg-white rounded-2xl p-8">
           <div class="mt-3">
@@ -196,6 +199,11 @@
             Withdraw Money
           </button>
         </form>
+      </div>
+
+      <!-- transfer money -->
+      <div id="transfer-money-parent" class="form" style="display: none">
+        <h1 class="font-bold my-5">Transfer Money</h1>
       </div>
     </div>
 
